--- a/KorytoWeb/Views/Order/Index.cshtml
+++ b/KorytoWeb/Views/Order/Index.cshtml
@@ -14,8 +14,6 @@
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
         <div class="form-group">
             <p>
@@ -25,6 +23,9 @@
                 <tr>
                     <th>
                         @Html.DisplayNameFor(model => model.OrderCars[0].CarName)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.OrderCars[0].Amount)
                     </th>
                     <th></th>
                 </tr>
@@ -46,15 +47,24 @@
         </div>
 
         <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
+            <div class="col-md-10">
                 <input type="submit" value="Создать" class="btn btn-primary" />
             </div>
         </div>
     </div>
 }
 
+@using (Html.BeginForm("ReservePost", "Order", FormMethod.Post))
+{
+    <div class="form-group">
+        <div class="col-lg-push-9">
+            <input type="submit" value="Зарезервировать" class="btn btn-default" />
+        </div>
+    </div>
+}
+
 <div>
-    @Html.ActionLink("Вернуться к списку заказов", "Index")
+    @Html.ActionLink("Вернуться к списку заказов", "Index", "Orders")
 </div>
 
 @section Scripts {
