--- a/KorytoWeb/Views/User/Index.cshtml
+++ b/KorytoWeb/Views/User/Index.cshtml
@@ -6,6 +6,24 @@
 <h2>Личный кабинет</h2>
 
 <div>
+    <div class="form-group">
+        <label>Имя: </label>
+        <span>@ViewBag.User.ClientFIO</span>
+    </div>
 
+    <div class="form-group">
+        <label>Логин: </label>
+        <span>@ViewBag.User.Login</span>
+    </div>
+
+    <div class="form-group">
+        <label>Почта: </label>
+        <span>@ViewBag.User.Mail</span>
+    </div>
+
+    <div class="form-group">
+        <label>Пароль: </label>
+        <span>@ViewBag.User.Password</span>
+    </div>
 </div>
 
