--- a/KorytoWeb/Views/Orders/Details.cshtml
+++ b/KorytoWeb/Views/Orders/Details.cshtml
@@ -1,58 +1,84 @@
 ﻿@model KorytoModel.Order
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Просмотр заказа";
 }
 
-<h2>Details</h2>
+<h2>Просмотр заказа</h2>
+@using (Html.BeginForm("PayOrderPost", "Orders", FormMethod.Post))
+{
+    @Html.AntiForgeryToken()
+    <div>
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>
+                ФИО Клиента
+            </dt>
 
-<div>
-    <h4>Order</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Client.ClientFIO)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Client.ClientFIO)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Client.ClientFIO)
-        </dd>
+            <dt>
+                Сумма
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.TotalSum)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.TotalSum)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.TotalSum)
-        </dd>
+            <dt>
+                Статус
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.OrderStatus)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.OrderStatus)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.OrderStatus)
-        </dd>
+            <dt>
+                Дата создания
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.DateCreate)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.DateCreate)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.DateCreate)
-        </dd>
+            <dt>
+                Дата исполнения
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.DateImplement)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.DateImplement)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.DateImplement)
-        </dd>
+        </dl>
 
-    </dl>
-</div>
+        <table class="table">
+            <tr>
+                <th>
+                    Машина
+                </th>
+                <th>
+                    Количество
+                </th>
+                <th></th>
+            </tr>
+
+            @foreach (var item in Model.OrderCars)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Car.CarName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Amount)
+                    </td>
+                </tr>
+            }
+
+        </table>
+    </div>
+}
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Вернуться к списку заказов", "Index")
 </p>
