--- a/KorytoWeb/Views/Orders/Index.cshtml
+++ b/KorytoWeb/Views/Orders/Index.cshtml
@@ -41,7 +41,11 @@
                 @Html.DisplayFor(modelItem => item.DateImplement)
             </td>
             <td>
-                @Html.ActionLink("Подробнее", "Details", new { id=item.Id }) 
+                @Html.ActionLink("Подробнее", "Details", new { id = item.Id }) |
+                @if(item.StatusOrder == "Готов")
+                {
+                    @Html.ActionLink("Оплатить", "Pay", new { id = item.Id })
+                }
             </td>
         </tr>
     }
