--- a/KorytoWeb/Views/Shared/_Layout.cshtml
+++ b/KorytoWeb/Views/Shared/_Layout.cshtml
@@ -24,6 +24,8 @@
                     {
                         <li>@Html.ActionLink("Заказы", "Index", "Orders")</li>
                         <li>@Html.ActionLink("Машины", "Index", "Cars")</li>
+                        <li>@Html.ActionLink("Статистика", "Index", "Statistics")</li>
+                        <li>@Html.ActionLink("Личный кабинет", "Index", "User")</li>
                         <li>@Html.ActionLink("Выйти", "Exit", "Clients")</li>
                     }
                     else
