--- a/KorytoWeb/Views/Statistics/Index.cshtml
+++ b/KorytoWeb/Views/Statistics/Index.cshtml
@@ -7,11 +7,13 @@
 
 <div>
     <div class="form-group">
-        <label>Самая покупаемая машина: @ViewBag.Service.MostPopularCar()</label>
+        <label>Самая покупаемая машина: </label>
+        <span>@ViewBag.Service.GetMostPopularCar()</span>
     </div>
 
     <div class="form-group">
-        <label>Средний чек заказа: @ViewBag.Service.GetAverPrice()</label>
+        <label>Средний чек заказа: </label>
+        <span>@ViewBag.Service.GetAverPrice()</span>
     </div>
 </div>
 
