--- a/KorytoWeb/Views/Statistics/Index.cshtml
+++ b/KorytoWeb/Views/Statistics/Index.cshtml
@@ -8,7 +8,7 @@
 <div>
     <div class="form-group">
         <label>Самая покупаемая машина: </label>
-        <span>@ViewBag.Service.GetMostPopularCar()</span>
+        <span>@ViewBag.Service.GetMostPopularCar().name в количестве @ViewBag.Service.GetMostPopularCar().count</span>
     </div>
 
     <div class="form-group">
