--- a/KorytoWeb/Views/Orders/Details.cshtml
+++ b/KorytoWeb/Views/Orders/Details.cshtml
@@ -5,7 +5,7 @@
 }
 
 <h2>Просмотр заказа</h2>
-@using (Html.BeginForm("PayOrderPost", "Orders", FormMethod.Post))
+@using (Html.BeginForm("", "Orders", FormMethod.Post))
 {
     @Html.AntiForgeryToken()
     <div>
