--- a/KorytoWeb/Views/Statistics/Index.cshtml
+++ b/KorytoWeb/Views/Statistics/Index.cshtml
@@ -13,7 +13,7 @@
 
     <div class="form-group">
         <label>Средний чек заказа: </label>
-        <span>@ViewBag.Service.GetAverPrice()</span>
+        <span>@ViewBag.Service.GetAverageCheck()</span>
     </div>
 </div>
 
