client orders report

--- a/KorytoWeb/Views/Shared/_Layout.cshtml
+++ b/KorytoWeb/Views/Shared/_Layout.cshtml
@@ -26,6 +26,7 @@
                         <li>@Html.ActionLink("Машины", "Index", "Cars")</li>
                         <li>@Html.ActionLink("Статистика", "Index", "Statistics")</li>
                         <li>@Html.ActionLink("Личный кабинет", "Index", "User")</li>
+                        <li>@Html.ActionLink("Отчет", "Index", "Reports")</li>
                         <li>@Html.ActionLink("Выйти", "Exit", "Clients")</li>
                     }
                     else
