--- a/KorytoWeb/Views/Reports/Index.cshtml
+++ b/KorytoWeb/Views/Reports/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<KorytoServiceDAL.ViewModel.OrderViewModel>
+﻿@model KorytoServiceDAL.BindingModel.ReportBindingModel
 
 @{
     ViewBag.Title = "Отчет";
@@ -9,12 +9,38 @@
 @using (Html.BeginForm("CreateReport", "Reports", FormMethod.Post))
 {
     <div class="form-group">
-        
-        
 
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Сформировать" class="btn btn-primary"/>
+        <div class="form-group">
+            <label class="control-label col-md-2">Дата начала</label>
+            <div class="input-group" id="dtp1">
+                @Html.EditorFor(model => model.DateFrom, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.DateFrom, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label class="control-label col-md-2">Дата конца</label>
+            <div class="input-group" id="dtp2">
+                @Html.EditorFor(model => model.DateTo, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.DateTo, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Сформировать" class="btn btn-primary" />
+            </div>
         </div>
     </div>
 }
+
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
+
+@*<script>
+    $(document).ready(function() {
+        $("dtp1").dateTime();
+    })
+</script>*@
 
