--- a/KorytoWeb/Views/Reports/Index.cshtml
+++ b/KorytoWeb/Views/Reports/Index.cshtml
@@ -12,17 +12,15 @@
 
         <div class="form-group">
             <label class="control-label col-md-2">Дата начала</label>
-            <div class="input-group" id="dtp1">
-                @Html.EditorFor(model => model.DateFrom, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.DateFrom, "", new { @class = "text-danger" })
+            <div class="input-group">
+                <input type="date" class="form-control" name="dateFrom" />
             </div>
         </div>
 
         <div class="form-group">
             <label class="control-label col-md-2">Дата конца</label>
-            <div class="input-group" id="dtp2">
-                @Html.EditorFor(model => model.DateTo, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.DateTo, "", new { @class = "text-danger" })
+            <div class="input-group">
+                <input class="form-control" type="date" name="dateTo" />
             </div>
         </div>
 
@@ -37,10 +35,4 @@
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
-
-@*<script>
-    $(document).ready(function() {
-        $("dtp1").dateTime();
-    })
-</script>*@
 
