бэкап бд, валидация ошибок, фильрация

--- a/KorytoWeb/Views/User/Index.cshtml
+++ b/KorytoWeb/Views/User/Index.cshtml
@@ -34,7 +34,7 @@
                 Всего машин заказано
             </th>
             <th>
-               "Любимая" машина
+                "Любимая" машина
             </th>
             <th>
                 Средний чек
@@ -56,5 +56,7 @@
         </tr>
 
     </table>
+    
+    @Html.ActionLink("Сохранить БД", "SaveDataBaseClient")
 </div>
 
